The latest version of the map from hell.
Former-commit-id: 5d0d3cb3bca1fde7ec1f5f82df0dd73328918af9

--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1084,6 +1084,28 @@ texture n "acord/met10n.jpg" 0 0 0 0.5
 texture s "acord/highspec.jpg" 0 0 0 0.5
 texture z "acord/met10z.jpg" 0 0 0 0.5
 
+//map lighting
+
+texture 0 "acord/light4.jpg" 0 0 0 0.125
+texture n "acord/light4n.jpg" 0 0 0 0.125
+texture s "acord/highspec.jpg" 0 0 0 0.125
+texture z "acord/light4z.jpg" 0 0 0 0.125
+
+texture 0 "acord/light5.jpg" 0 0 0 0.125
+texture n "acord/light5n.jpg" 0 0 0 0.125
+texture s "acord/highspec.jpg" 0 0 0 0.125
+texture z "acord/light5z.jpg" 0 0 0 0.125
+
+texture 0 "acord/light6.jpg" 0 0 0 0.125
+texture n "acord/light6n.jpg" 0 0 0 0.125
+texture s "acord/highspec.jpg" 0 0 0 0.125
+texture z "acord/light6z.jpg" 0 0 0 0.125
+
+texture 0 "acord/light7.jpg" 0 0 0 0.125
+texture n "acord/light7n.jpg" 0 0 0 0.125
+texture s "acord/highspec.jpg" 0 0 0 0.125
+texture z "acord/light7z.jpg" 0 0 0 0.125
+
 
 
 setshader stdworld
