--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -157,7 +157,7 @@ texture z "acord/concretez.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/concrete.jpg" 1 0 0 0.500000 // 14
 texture n "acord/concreten.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/concretez.jpg"
 
 setshader bumpspecmapparallaxworld
@@ -169,31 +169,31 @@ texture z "acord/box1z.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/box1.jpg" 1 0 0 0.500000 // 16
 texture n "acord/box1n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box1z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/box2.jpg" 0 0 0 0.500000 // 17
 texture n "acord/box2n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box2z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/box2.jpg" 1 0 0 0.500000 // 18
 texture n "acord/box2n.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/box2z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/console.jpg" 0 0 0 0.500000 // 19
 texture n "acord/consolen.jpg"
-texture s "acord/lowspec.jpg.jpg"
+texture s "acord/lowspec.jpg"
 texture z "acord/consolez.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/console.jpg" 1 0 0 0.500000 // 20
 texture n "acord/consolen.jpg"
-texture s "acordlowspec.jpg.jpg"
+texture s "acordlowspec.jpg"
 texture z "acord/consolez.jpg"
 
 setshader bumpspecmapparallaxworld
@@ -985,19 +985,19 @@ texture z "acord/marsrockz.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/ice_new.png" 1 0 0 0.500000 // 152
 texture n "acord/ice_newn.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/ice_newz.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/ice_old.png" 1 0 0 0.500000 // 153
 texture n "acord/ice_oldn.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/ice_oldz.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/snow_fine.png" 1 0 0 0.500000 // 154
 texture n "acord/snow_finen.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/snow_finez.png"
 
 setshader bumpspecmapparallaxworld
