--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -255,6 +255,7 @@ newgui game [
 			vardef spawndelay		"spawn delay"
 			vardef ctfspawndelay	"ctf spawn delay"
 			vardef stfspawndelay	"stf spawn delay"
+			vardef spawndelaywait	"spawn delay wait"
 			vardef instaspawnscale	"insta spawn scale"
 			vardef paintspawnscale	"paint spawn scale"
 		]
@@ -271,6 +272,7 @@ newgui game [
 			varfld spawndelay 16
 			varfld ctfspawndelay 16
 			varfld stfspawndelay 16
+			varfld spawndelaywait 16
 			varfld instaspawnscale 16
 			varfld paintspawnscale 16
 		]
