add ragdoll.h to cbp, tweak paintgun maxammo and kickback/wobble, make spawndelaywait a sane variable rather than a scale
Former-commit-id: f3646ecb36207ffd19c2bdc9e36bc137fcb08788

--- a/src/bloodfrontier.cbp
+++ b/src/bloodfrontier.cbp
@@ -652,6 +652,11 @@
 			<Option target="client-dbg" />
 			<Option target="profile" />
 		</Unit>
+		<Unit filename="engine\ragdoll.h">
+			<Option target="client" />
+			<Option target="client-dbg" />
+			<Option target="profile" />
+		</Unit>
 		<Unit filename="engine\rendergl.cpp">
 			<Option target="client" />
 			<Option target="client-dbg" />
