more satisfying damage pushes
Former-commit-id: 562801e36732bb997e8f6c31d0f24861565ec76c

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -214,6 +214,9 @@ newgui game [
 			vardef gravityscale		"gravity scale"
 			vardef jumpscale		"jump scale"
 			vardef speedscale		"speed scale"
+			vardef hitpushscale		"hit push scale"
+			vardef deadpushscale	"dead push scale"
+			vardef wavepushscale	"wave push scale"
 		]
 		guistrut 1
 		guilist [
@@ -239,6 +242,9 @@ newgui game [
 			varfld gravityscale 16
 			varfld jumpscale 16
 			varfld speedscale 16
+			varfld hitpushscale 16
+			varfld deadpushscale 16
+			varfld wavepushscale 16
 		]
 	]
 	guitab "timers"
