--- a/data/models/actors/player/delta/vwep/md5.cfg
+++ b/data/models/actors/player/delta/vwep/md5.cfg
@@ -1,11 +1,11 @@
-md5load mesh.md5mesh firstplayer
+md5load "../../trooper_hands.md5mesh" firstplayer
 
 md5tag Weapon tag_weapon
 
 md5skin mesh "<compress:2>../skin.jpg" "<compress:2>../../mask.jpg"
 md5bumpmap mesh "<compress:2>../../normals.jpg"
 
-md5pitch Torso 1.0 0 -89 89
+md5pitch "" 1
 
 md5anim "idle"                         "../../vwep_p_idle.md5anim"         1
 md5anim "pain"                         "../../vwep_p_idle.md5anim"         1
