--- a/data/engine.cfg
+++ b/data/engine.cfg
@@ -14,6 +14,8 @@ clip = [ editmat clip ]
 glass = [ editmat glass ]
 noclip = [ editmat noclip ]
 lava = [ editmat lava ]
+death = [ editmat death ]
+ladder = [ editmat ladder ]
 
 //////// Entity Editing ///////////////
 
