highspec.png -> highspec.jpg
Former-commit-id: 1eb889f06b2a0f0629bfa4037942c2df734d3d5b

--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -985,19 +985,19 @@ texture z "acord/marsrockz.jpg"
 setshader bumpspecmapparallaxworld
 texture c "acord/ice_new.png" 1 0 0 0.500000 // 152
 texture n "acord/ice_newn.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/ice_newz.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/ice_old.png" 1 0 0 0.500000 // 153
 texture n "acord/ice_oldn.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/ice_oldz.png"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/snow_fine.png" 1 0 0 0.500000 // 154
 texture n "acord/snow_finen.png"
-texture s "acord/highspec.png"
+texture s "acord/highspec.jpg"
 texture z "acord/snow_finez.png"
 
 setshader bumpspecmapparallaxworld
