kid mode conditional and modified skin
Former-commit-id: 6825200319281e67e5c30881637925d2f5df05bc

--- a/data/models/acord/vend1/md5.cfg
+++ b/data/models/acord/vend1/md5.cfg
@@ -1,5 +1,5 @@
 md5load mesh.md5mesh
-md5skin mesh skin.jpg mask.png
+md5skin mesh (if (> getkidmode 0) [result "kidskin.jpg"] [result "skin.jpg"]) mask.png
 md5bumpmap mesh normal.png
 
 mdlcollide 1
