don't be so hasty to remove ragdoll (new wait state camera handling)
Former-commit-id: 7483bc884a96566cb6e1f15e59ebc8189b6e30ab

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -71,7 +71,7 @@
 // waterfog 150
 // blurlms 0
 
-"on_start" = [ if (= (gamemode) 1) [ sleep (+ $titlecardtime $titlecardfade) [ run_intro ] ] ]
+"on_start" = [ if (= (gamemode) 1) [ sleep $titlecard [ run_intro ] ] ]
 "run_intro" = [
 	intro_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
 	intro_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
