bots try not to shoot team and try harder return the flag, some balancing tweaks, camera cleanups
Former-commit-id: 670488da0fac907466c811c786b9c917d789d1dd

--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -20,7 +20,7 @@
 // cloudfade 1.0
 // skytexture 1
 // gravity 30.0
-// numteamplayers 4
+numteamplayers 12
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -45,7 +45,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 96
-// numplayers 4
+numplayers 20
 // adaptivesample 1
 // maptitle [Untitled by Unknown]
 // waterfallcolour 0
