--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -47,7 +47,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 6
+numplayers 5
 // adaptivesample 1
 // waterfallcolour 0
 // floorz 0.867
