--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -21,7 +21,7 @@
 // skytexture 1
 // gravity 40.0
 // grassheight 8
-// numteamplayers 4
+numteamplayers 3
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -47,7 +47,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 8
+numplayers 6
 // adaptivesample 1
 // waterfallcolour 0
 // floorz 0.867
