--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -21,7 +21,7 @@
 // skytexture 1
 // gravity 40.0
 // grassheight 8
-// numteamplayers 5
+numteamplayers 4
 // cloudscale 0.1
 // stepspeed 1.0
 // movespeed 50.0
