--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -47,7 +47,7 @@
 // lerpsubdiv 2
 // envmapradius 128
 // lightprecision 32
-// numplayers 4
+numplayers 8
 // adaptivesample 1
 // waterfallcolour 0
 // floorz 0.867
