--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -20,7 +20,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 100.0
-// numteamplayers 4
+numteamplayers 16
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
@@ -45,7 +45,7 @@
 // lerpsubdiv 4
 // envmapradius 128
 // lightprecision 32
-// numplayers 4
+numplayers 32
 // adaptivesample 1
 // maptitle [smoulderingctf]
 // waterfallcolour 0
