--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -21,7 +21,7 @@
 // skytexture 1
 // gravity 60.0
 // grassheight 8
-// numteamplayers 5
+numteamplayers 4
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
