updated 4square and warehouse
Former-commit-id: acc4f8ac2ba96b6005f9ecd9716eb962e3792c6a

--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -20,7 +20,6 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 60.0
-// grassheight 8
 numteamplayers 4
 // cloudscale 1.0
 // stepspeed 1.0
@@ -37,11 +36,10 @@ numteamplayers 4
 // impulsetime 0
 // crawlspeed 30.0
 // lerpangle 44
-// grassblend 0
+// flarelights 0
 // impulsespeed 100.0
 // spinclouds 0.0
 // causticscale 100
-// grasswidth 6
 // edgetolerance 4
 // skylight 0
 // lerpsubdiv 2
@@ -49,6 +47,7 @@ numteamplayers 4
 // lightprecision 32
 // numplayers 8
 // adaptivesample 1
+// maptitle [Warehouse by Tony Cord]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
@@ -61,7 +60,6 @@ numteamplayers 4
 // ambient 20
 // slopez 0.5
 // caustictex [<anim:75>textures/caustics]
-// grassrand 30
 // yawsky 0
 // stairheight 4.1
 // waterspec 150
