--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -20,7 +20,7 @@
 // cloudfade 0.2
 // skytexture 1
 // gravity 60.0
-numteamplayers 4
+// numteamplayers 4
 // cloudscale 1.0
 // stepspeed 1.0
 // movespeed 50.0
