central flag for 4square, update map rotations, improved game gui maps view
Former-commit-id: aecaa7162ccc78fae1ed45e40e3c6d5d7f89f418

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -93,9 +93,11 @@ newgui help [
 
 maplists = [ "" "" lobbymaps lobbymaps mainmaps mainmaps missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 
+showngamegui = 0
 mapselected = 0
 mutsselected = 0
 modeselected = 4
+extramap = ""
 
 vardef = [
 	guitext (format "%1 " $arg2)
@@ -109,10 +111,23 @@ varfld = [
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
 
 newgui game [
-	if (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) [
+	if (|| (|| (!= $lastmode $modeselected) (!= $lastmuts $mutsselected)) (!= $showngamegui 1)) [
+		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
 		ms = (* $modeselected 2)
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
-		do [maplist = $@(at $maplists $ms)]
+		maplist = $@(at $maplists $ms)
+		n = (listlen $lobbymaps)
+		loop i $n [
+			ncurmap = (at $lobbymaps $i)
+			m = (listlen $maplist)
+			f = 0
+			loop j $m [
+				mcurmap = (at $maplist $j)
+				if (strcmp $ncurmap $mcurmap) [ f = 1 ]
+			]
+			if (= $f 0) [ maplist = (concat $maplist $ncurmap) ]
+		]
+		maplist = (concat $maplist "-")
 		mapnum = 0
 		mapfnd = 0
 		n = (listlen $maplist)
@@ -120,19 +135,27 @@ newgui game [
 			curmap = (at $maplist $i)
 			if (|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))) [ mapnum = $i; mapfnd = 1 ]
 		]
-		if (&& (= $mapfnd 1) (< (+ $mapnum 1) $n)) [ mapnum = (+ $mapnum 1) ] [ mapnum = 0 ]
+		if (= $mapfnd 0) [ mapnum = $n; extramap = (mapname) ]
+		//if (< (+ $mapnum 1) $n) [ mapnum = (+ $mapnum 1) ] [ mapnum = 0 ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
+		showngamegui = 1
 	]
-	maptxt = (at $maplist $mapnum)
+	if (= (listlen $maplist) (+ $mapnum 1)) [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
 	guilist [
 		guilist [
-			guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 4 1 "textures/nothumb"
+			guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 8 1 "textures/nothumb"
 			guitext $maptxt
+		]
+		guistrut 1
+		guilist [
+			guititle "maps"
 			n = (listlen $maplist)
 			loop i $n [
 				curmap = (at $maplist $i)
-				guiradio $curmap mapnum $i
+				guilist [
+					if (= $n (+ $i 1)) [ guiradio "" mapnum $i; extramapval = $extramap; guifield $extramapval 16 [extramap = $extramapval]] [ guiradio $curmap mapnum $i ]
+				]
 			]
 		]
 		guistrut 1
@@ -312,6 +335,8 @@ newgui game [
 	lastmode = -1
 	lastmuts = -1
 	mapnum = 0
+	showngamegui = 0
+	extramap = ""
 ]
 
 newgui servers [
