bug fixes and attempts at improving the flamer (visual/slowdown)
Former-commit-id: 0d8c9459361a8131fbab899c1a2c6fb706967053

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -115,7 +115,7 @@ newgui game [
 		if (&& (!= $lastmode $modeselected) (!= $showngamegui 0)) [ mutsselected = 0 ]
 		ms = (* $modeselected 2)
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
-		maplist = $@(at $maplists $ms)
+		do [maplist = $@(at $maplists $ms)]
 		n = (listlen $lobbymaps)
 		loop i $n [
 			ncurmap = (at $lobbymaps $i)
@@ -136,7 +136,9 @@ newgui game [
 			if (|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))) [ mapnum = $i; mapfnd = 1 ]
 		]
 		if (= $mapfnd 0) [ mapnum = $n; extramap = (mapname) ]
-		//if (< (+ $mapnum 1) $n) [ mapnum = (+ $mapnum 1) ] [ mapnum = 0 ]
+		//if (= (getintermission) 1) [
+		//	if (< (+ $mapnum 1) $n) [ mapnum = (+ $mapnum 1) ] [ mapnum = 0 ]
+		//]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
@@ -144,8 +146,39 @@ newgui game [
 	if (= (listlen $maplist) (+ $mapnum 1)) [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
 	guilist [
 		guilist [
-			guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 8 1 "textures/nothumb"
-			guitext $maptxt
+			guilist [
+				guilist [
+					guititle "gamemode"
+					guiradio "lobby"						modeselected 1
+					guiradio "editing"						modeselected 2
+					guiradio "deathmatch"					modeselected 4
+					guiradio "secure-the-flag"				modeselected 5
+					guiradio "capture-the-flag"				modeselected 6
+					guistrut 1
+					guititle "mutators"
+					guibitfield "multi-sided"				mutsselected 0x0001
+					guibitfield "teamplay"					mutsselected 0x0002
+					guibitfield "instagib"					mutsselected 0x0004
+					guibitfield "duel"						mutsselected 0x0008
+					guibitfield "last-man"					mutsselected 0x0010
+					guibitfield "paintball"					mutsselected 0x0020
+
+					mutsselected = (mutscheck $modeselected $mutsselected)
+					guistrut 1
+					guilist [
+						guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
+						guistrut 1
+						guibutton (format "%1cancel" $red) [cleargui 1] "exit"
+					]
+				]
+				guistrut 1
+				guilist [
+					guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 6 1 "textures/nothumb"
+				]
+			]
+			guistrut 1
+			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
+			guitext (format "%1  selected on map %2" $yellow $maptxt) "info"
 		]
 		guistrut 1
 		guilist [
@@ -158,66 +191,7 @@ newgui game [
 				]
 			]
 		]
-		guistrut 1
-		guilist [
-			guititle "gamemode"
-			guiradio "lobby"						modeselected 1
-			guiradio "editing"						modeselected 2
-			guiradio "deathmatch"					modeselected 4
-			guiradio "secure the flag"				modeselected 5
-			guiradio "capture the flag"				modeselected 6
-			guistrut 1
-			guititle "mutators"
-			guibitfield "multi-sided"				mutsselected 0x0001
-			guibitfield "teamplay"					mutsselected 0x0002
-			guibitfield "instagib"					mutsselected 0x0004
-			guibitfield "duel"						mutsselected 0x0008
-			guibitfield "last man standing"			mutsselected 0x0010
-			guibitfield "paintball"					mutsselected 0x0020
-
-			mutsselected = (mutscheck $modeselected $mutsselected)
-
-			guistrut 1
-			guitext (format "%1%2" $yellow (gamename $modeselected $mutsselected)) "info"
-			guitext (format "%1  on %2" $yellow $maptxt) "info"
-			guistrut 1
-			guilist [
-				guibutton (format "%1cast vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
-				guistrut 1
-				guibutton (format "%1cancel" $red) [cleargui 1] "exit"
-			]
-		]
 	]
-	guitab "maps"
-	guilist [
-		guilist [
-			vardef defaultmap		"default map"
-			vardef defaultmode		"default mode"
-			vardef defaultmuts		"default mutators"
-			vardef maprotate		"map rotation"
-			vardef spawnrotate		"spawn rotation"
-		]
-		guistrut 1
-		guilist [
-			varfld defaultmap 32
-			varfld defaultmode 32
-			varfld defaultmuts 32
-			varfld maprotate 32
-			varfld spawnrotate 32
-		]
-	]
-	//vardef lobbymaps		"lobby maps:"
-	//	varfld lobbymaps 256
-	//vardef missionmaps		"mission maps:"
-	//	varfld missionmaps 256
-	//vardef mainmaps			"main maps:"
-	//	varfld mainmaps 256
-	//vardef ctfmaps			"ctf maps:"
-	//	varfld ctfmaps 256
-	//vardef mctfmaps			"multi-ctf maps:"
-	//	varfld mctfmaps 256
-	//vardef stfmaps			"stf maps:"
-	//	varfld stfmaps 256
 	guitab "vars"
 	guilist [
 		guilist [
@@ -233,6 +207,8 @@ newgui game [
 			vardef stffinish		"stf all finish"
 			vardef spawnweapon		"spawn weapon"
 			vardef instaspawnweapon	"insta spawn weapon"
+			vardef maprotate		"map rotation"
+			vardef spawnrotate		"spawn rotation"
 			vardef damagescale		"damage scale"
 			vardef gravityscale		"gravity scale"
 			vardef jumpscale		"jump scale"
@@ -261,6 +237,8 @@ newgui game [
 				guilist [ varfld instaspawnweapon 16 ]
 				guitext (format "%1 %2" $gray (at $wepnames $instaspawnweapon))
 			]
+			varfld maprotate 32
+			varfld spawnrotate 32
 			varfld damagescale 16
 			varfld gravityscale 16
 			varfld jumpscale 16
