fixes, cleanups and improvements
Former-commit-id: 6309ef2d14ab6f5f1697f64e5a3ac62a55623687

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -265,3 +265,8 @@ ent_action_sound          = [ entproperty 0 ( * $arg1 1 ) ]
 ent_action_cycle          = [ entset ( if ( > $arg1 -1 ) [ result $arg2 ] [ result $arg3 ] ) ]
 
 exec "menus.cfg" // keep this here, it uses some of the stuff above
+
+specbind MOUSE1 [ specmodeswitch ]
+specbind MOUSE2 [ spectator 0 ]
+//specbind MOUSE4 [ specfollow 1 ]
+//specbind MOUSE5 [ specfollow -1 ]
