more game menu tweaking
Former-commit-id: 12b05e27921a221a8f74b34a10dfc6e2f75b09a4

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -173,7 +173,8 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
-					guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 6 1 "textures/nothumb"
+					guistrut 1
+					guiimage (format "maps/%1" $maptxt) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) 7 1 "textures/nothumb"
 				]
 			]
 			guistrut 1
@@ -195,96 +196,118 @@ newgui game [
 	guitab "vars"
 	guilist [
 		guilist [
-			vardef teamdamage		"team damage"
-			vardef maxhealth		"max health"
-			vardef maxcarry			"max carry weaps"
-			vardef regenhealth		"regen health"
-			vardef itemsallowed		"items allowed"
-			vardef itemdropping		"item dropping"
-			vardef kamikaze			"kamikaze"
-			vardef ctflimit			"ctf score limit"
-			vardef stflimit			"stf score limit"
-			vardef stffinish		"stf all finish"
-			vardef spawnweapon		"spawn weapon"
-			vardef instaspawnweapon	"insta spawn weapon"
-			vardef maprotate		"map rotation"
-			vardef spawnrotate		"spawn rotation"
-			vardef damagescale		"damage scale"
-			vardef gravityscale		"gravity scale"
-			vardef jumpscale		"jump scale"
-			vardef speedscale		"speed scale"
-			vardef hitpushscale		"hit push scale"
-			vardef deadpushscale	"dead push scale"
-			vardef wavepushscale	"wave push scale"
+			guilist [
+				guilist [
+					guititle "play"
+					vardef teamdamage		"team damage"
+					vardef maxhealth		"max health"
+					vardef maxcarry			"max carry weaps"
+					vardef regenhealth		"regen health"
+					vardef itemsallowed		"items allowed"
+					vardef itemdropping		"item dropping"
+					vardef kamikaze			"kamikaze"
+					vardef ctflimit			"ctf score limit"
+					vardef stflimit			"stf score limit"
+					vardef stffinish		"stf all finish"
+					vardef spawnweapon		"spawn weapon"
+					vardef instaspawnweapon	"insta spawn weapon"
+					vardef maprotate		"map rotation"
+					vardef spawnrotate		"spawn rotation"
+					vardef damagescale		"damage scale"
+					vardef gravityscale		"gravity scale"
+					vardef jumpscale		"jump scale"
+					vardef speedscale		"speed scale"
+				]
+				guistrut 1
+				guilist [
+					guistrut 1
+					varfld teamdamage 6
+					varfld maxhealth 6
+					varfld maxcarry 6
+					varfld regenhealth 6
+					varfld itemsallowed 6
+					varfld itemdropping 6
+					varfld kamikaze 6
+					varfld ctflimit 6
+					varfld stflimit 6
+					varfld stffinish 6
+					guilist [
+						guilist [ varfld spawnweapon 2 ]
+						guitext (format "%1 %2" $gray (at $wepnames $spawnweapon))
+					]
+					guilist [
+						guilist [ varfld instaspawnweapon 2 ]
+						guitext (format "%1 %2" $gray (at $wepnames $instaspawnweapon))
+					]
+					varfld maprotate 6
+					varfld spawnrotate 6
+					varfld damagescale 6
+					varfld gravityscale 6
+					varfld jumpscale 6
+					varfld speedscale 6
+				]
+			]
 		]
-		guistrut 1
+		guistrut 2
 		guilist [
-			varfld teamdamage 16
-			varfld maxhealth 16
-			varfld maxcarry 16
-			varfld regenhealth 16
-			varfld itemsallowed 16
-			varfld itemdropping 16
-			varfld kamikaze 16
-			varfld ctflimit 16
-			varfld stflimit 16
-			varfld stffinish 16
 			guilist [
-				guilist [ varfld spawnweapon 16 ]
-				guitext (format "%1 %2" $gray (at $wepnames $spawnweapon))
+				guilist [
+					vardef hitpushscale		"hit push scale"
+					vardef deadpushscale	"dead push scale"
+					vardef wavepushscale	"wave push scale"
+					guistrut 1
+					guititle "timers"
+					vardef timelimit		"time limit"
+					vardef intermlimit		"intermission"
+					vardef votelimit		"vote limit"
+					vardef itemspawntime	"item spawn time"
+					vardef regendelay		"regen delay"
+					vardef regentime		"regen time"
+					vardef spawnprotecttime	"spawn protect"
+					vardef paintfreezetime	"paint freeze"
+					vardef spawndelay		"spawn delay"
+					vardef ctfspawndelay	"ctf spawn delay"
+					vardef stfspawndelay	"stf spawn delay"
+					vardef spawndelaywait	"spawn delay wait"
+					vardef instaspawnscale	"insta spawn scale"
+					vardef paintspawnscale	"paint spawn scale"
+				]
+				guistrut 1
+				guilist [
+					varfld hitpushscale 6
+					varfld deadpushscale 6
+					varfld wavepushscale 6
+					guistrut 2
+					varfld timelimit 6
+					varfld intermlimit 6
+					varfld votelimit 6
+					varfld itemspawntime 6
+					varfld regendelay 6
+					varfld regentime 6
+					varfld spawnprotecttime 6
+					varfld paintfreezetime 6
+					varfld spawndelay 6
+					varfld ctfspawndelay 6
+					varfld stfspawndelay 6
+					varfld spawndelaywait 6
+					varfld instaspawnscale 6
+					varfld paintspawnscale 6
+				]
 			]
-			guilist [
-				guilist [ varfld instaspawnweapon 16 ]
-				guitext (format "%1 %2" $gray (at $wepnames $instaspawnweapon))
-			]
-			varfld maprotate 32
-			varfld spawnrotate 32
-			varfld damagescale 16
-			varfld gravityscale 16
-			varfld jumpscale 16
-			varfld speedscale 16
-			varfld hitpushscale 16
-			varfld deadpushscale 16
-			varfld wavepushscale 16
 		]
 	]
-	guitab "timers"
-	guilist [
-		guilist [
-			vardef timelimit		"time limit"
-			vardef intermlimit		"intermission"
-			vardef votelimit		"vote limit"
-			vardef itemspawntime	"item spawn time"
-			vardef regendelay		"regen delay"
-			vardef regentime		"regen time"
-			vardef spawnprotecttime	"spawn protect"
-			vardef paintfreezetime	"paint freeze"
-			vardef spawndelay		"spawn delay"
-			vardef ctfspawndelay	"ctf spawn delay"
-			vardef stfspawndelay	"stf spawn delay"
-			vardef spawndelaywait	"spawn delay wait"
-			vardef instaspawnscale	"insta spawn scale"
-			vardef paintspawnscale	"paint spawn scale"
-		]
-		guistrut 1
-		guilist [
-			varfld timelimit 16
-			varfld intermlimit 16
-			varfld votelimit 16
-			varfld itemspawntime 16
-			varfld regendelay 16
-			varfld regentime 16
-			varfld spawnprotecttime 16
-			varfld paintfreezetime 16
-			varfld spawndelay 16
-			varfld ctfspawndelay 16
-			varfld stfspawndelay 16
-			varfld spawndelaywait 16
-			varfld instaspawnscale 16
-			varfld paintspawnscale 16
-		]
-	]
-	guitab "bots"
+] [
+	if (= (gamemode) 1) [ modeselected = 4 ] [ modeselected = (gamemode) ]
+	mutsselected = (mutscheck $modeselected (mutators))
+	lastmode = -1
+	lastmuts = -1
+	mapnum = 0
+	showngamegui = 0
+	extramap = ""
+]
+
+
+newgui bots [
 	if (> (gamemode) 1) [
 		guilist [
 			guistayopen [
@@ -302,19 +325,11 @@ newgui game [
 		]
 		guistrut 1
 		guilist [
-			varfld botbalance 16
-			varfld botminskill 16
-			varfld botmaxskill 16
+			varfld botbalance 6
+			varfld botminskill 6
+			varfld botmaxskill 6
 		]
 	]
-] [
-	if (= (gamemode) 1) [ modeselected = 4 ] [ modeselected = (gamemode) ]
-	mutsselected = (mutscheck $modeselected (mutators))
-	lastmode = -1
-	lastmuts = -1
-	mapnum = 0
-	showngamegui = 0
-	extramap = ""
 ]
 
 newgui servers [
