elevator theme music for overseer
Former-commit-id: 227097d301edd515e769acf90830c601b8f21495

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -36,6 +36,7 @@
 // impulsetime 0
 // crawlspeed 30.0
 // lerpangle 44
+// flarelights 0
 // impulsespeed 100.0
 // spinclouds 0.0
 // causticscale 100
@@ -390,4 +391,5 @@ mapsound "ambience/wastewind" 25 "air" -1 -1
 mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 15 "air" -1 -1
 mapsound "sfx/door" 250 "air" -1 -1
+mapsound "ambience/mita_mrebow" 250 "air" -1 -1
 
