--- a/data/models/acord/package.cfg
+++ b/data/models/acord/package.cfg
@@ -44,3 +44,5 @@ mmodel "acord/doors/door3"
 mmodel "acord/doors/door4"
 mmodel "acord/doors/door4b"
 mmodel "acord/vend1"
+mmodel "acord/pipe1/A"
+mmodel "acord/pipe1/B"
