QA improvements for CTF
Former-commit-id: 4d5580b3e13a561b9932e705a3fcc8128b9ee474

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -20,8 +20,7 @@
 // cloudfade 1.0
 // skytexture 1
 // gravity 40.0
-// grassheight 8
-numteamplayers 4
+// numteamplayers 4
 // cloudscale 0.1
 // stepspeed 1.0
 // movespeed 50.0
@@ -37,11 +36,10 @@ numteamplayers 4
 // impulsetime 0
 // crawlspeed 30.0
 // lerpangle 44
-// grassblend 0
+// flarelights 0
 // impulsespeed 100.0
 // spinclouds 0.0
 // causticscale 100
-// grasswidth 6
 // edgetolerance 4
 // skylight 328965
 // lerpsubdiv 2
@@ -49,6 +47,7 @@ numteamplayers 4
 // lightprecision 64
 // numplayers 8
 // adaptivesample 1
+// maptitle [Tower by Quinton Reeves]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
@@ -61,7 +60,6 @@ numteamplayers 4
 // ambient 10
 // slopez 0.5
 // caustictex [<anim:75>textures/caustics]
-// grassrand 30
 // yawsky 0
 // stairheight 4.1
 // waterspec 150
