more game menu tweaking
Former-commit-id: bb7fde0e3b454cf6d3ff0e518165f7b9e1ff36c3

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -117,6 +117,7 @@ newgui game [
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
 		do [maplist = $@(at $maplists $ms)]
 		n = (listlen $lobbymaps)
+		l = 0
 		loop i $n [
 			ncurmap = (at $lobbymaps $i)
 			m = (listlen $maplist)
@@ -125,9 +126,12 @@ newgui game [
 				mcurmap = (at $maplist $j)
 				if (strcmp $ncurmap $mcurmap) [ f = 1 ]
 			]
-			if (= $f 0) [ maplist = (concat $maplist $ncurmap) ]
+			if (= $f 0) [
+				if (= $l 0) [ maplist = (concat $maplist "?"); l = $i ]
+				maplist = (concat $maplist $ncurmap)
+			]
 		]
-		maplist = (concat $maplist "-")
+		if (= $l 0) [ maplist = (concat $maplist "?"); l = $n ]
 		mapnum = 0
 		mapfnd = 0
 		n = (listlen $maplist)
@@ -135,10 +139,7 @@ newgui game [
 			curmap = (at $maplist $i)
 			if (|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))) [ mapnum = $i; mapfnd = 1 ]
 		]
-		if (= $mapfnd 0) [ mapnum = $n; extramap = (mapname) ]
-		//if (= (getintermission) 1) [
-		//	if (< (+ $mapnum 1) $n) [ mapnum = (+ $mapnum 1) ] [ mapnum = 0 ]
-		//]
+		if (= $mapfnd 0) [ mapnum = $l; extramap = (mapname) ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
@@ -164,12 +165,6 @@ newgui game [
 					guibitfield "paintball"					mutsselected 0x0020
 
 					mutsselected = (mutscheck $modeselected $mutsselected)
-					guistrut 1
-					guilist [
-						guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
-						guistrut 1
-						guibutton (format "%1cancel" $red) [cleargui 1] "exit"
-					]
 				]
 				guistrut 1
 				guilist [
@@ -187,9 +182,23 @@ newgui game [
 			n = (listlen $maplist)
 			loop i $n [
 				curmap = (at $maplist $i)
-				guilist [
-					if (= $n (+ $i 1)) [ guiradio "" mapnum $i; extramapval = $extramap; guifield $extramapval 16 [extramap = $extramapval]] [ guiradio $curmap mapnum $i ]
+				if (strcmp $curmap "?") [
+					guistrut 1
+					guilist [
+						guiradio "" mapnum $i
+						extramapval = $extramap
+						guifield $extramapval 16 [extramap = $extramapval]
+					]
+					if (!= $n (+ $i 1)) [ guistrut 1 ]
+				] [
+					if (strcmp $curmap "*") [ guistrut 1 ] [ guiradio $curmap mapnum $i ]
 				]
+			]
+			guistrut 1
+			guilist [
+				guibutton (format "%1vote" $green) (format "start %1 %2 %3" $maptxt $modeselected $mutsselected) "action"
+				guistrut 2
+				guibutton (format "%1cancel" $red) [cleargui 1] "exit"
 			]
 		]
 	]
