--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -117,7 +117,7 @@ newgui game [
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
 		do [maplist = $@(at $maplists $ms)]
 		n = (listlen $lobbymaps)
-		l = 0
+		l = -1
 		loop i $n [
 			ncurmap = (at $lobbymaps $i)
 			m = (listlen $maplist)
@@ -127,11 +127,11 @@ newgui game [
 				if (strcmp $ncurmap $mcurmap) [ f = 1 ]
 			]
 			if (= $f 0) [
-				if (= $l 0) [ maplist = (concat $maplist "?"); l = $i ]
+				if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
 				maplist = (concat $maplist $ncurmap)
 			]
 		]
-		if (= $l 0) [ maplist = (concat $maplist "?"); l = $n ]
+		if (< $l 0) [ maplist = (concat $maplist "?"); l = $n ]
 		mapnum = 0
 		mapfnd = 0
 		n = (listlen $maplist)
