politely-forcefully request a player have a name
Former-commit-id: 13a6a5298f35a60a43d86953fc630f8b975dbb63

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -108,6 +108,19 @@ varfld = [
 	guifield $varname $arg2 [@arg1 $@varname]
 ]
 
+newgui name [
+	guitext (format "Welcome to %1Blood Frontier" $red)
+	guistrut 1
+	guititle "Please enter your name"
+	guistrut 1
+	guilist [
+		nameval = (getname)
+		guifield nameval 20 [name $nameval]
+		guistrut 1
+		guibutton (format "%1OK" $green) [cleargui 1] "action"
+	]
+]
+
 wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
 
 newgui game [
@@ -187,7 +200,7 @@ newgui game [
 					guilist [
 						guiradio "" mapnum $i
 						extramapval = $extramap
-						guifield $extramapval 16 [extramap = $extramapval]
+						guifield extramapval 16 [extramap = $extramapval]
 					]
 					if (!= $n (+ $i 1)) [ guistrut 1 ]
 				] [
