ensure all maps have a maptitle
Former-commit-id: 48afc3cf406a08a4fd60645ec4b2d837ee5d4e76

--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -47,7 +47,7 @@
 // lightprecision 96
 // numplayers 20
 // adaptivesample 1
-// maptitle [Untitled by Unknown]
+maptitle [Four Square by Tony Cord]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
