--- a/data/maps/d4test.cfg
+++ b/data/maps/d4test.cfg
@@ -3,6 +3,7 @@
 
 numplayers 4 // number of players in deathmatch
 numteamplayers 1 // number of players per team
+maptitle "Door Test by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
