--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -73,6 +73,7 @@ numplayers 5
 // mmshadows 1
 // waterfog 150
 // blurlms 0
+maptitle "Eight by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
