--- a/data/maps/exoticbase.cfg
+++ b/data/maps/exoticbase.cfg
@@ -3,6 +3,7 @@
 
 numplayers 10 // number of players in deathmatch
 numteamplayers 6 // number of players per team
+maptitle "Exotic Base by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
 texture 1 "textures/waterfall.jpg"
