--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -47,7 +47,7 @@
 // lightprecision 32
 // numplayers 6
 // adaptivesample 1
-// maptitle [Overseer by Tony Cord]
+maptitle [Overseer by Tony Cord]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
