--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -73,6 +73,7 @@ numplayers 8
 // mmshadows 1
 // waterfog 150
 // blurlms 0
+maptitle "Refuge by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
 texture 1 "textures/waterfall.jpg"
