--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -47,7 +47,7 @@ numteamplayers 16
 // lightprecision 32
 numplayers 32
 // adaptivesample 1
-// maptitle [smoulderingctf]
+maptitle [Smouldering by Kurt Kessler]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
