--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -73,6 +73,7 @@
 // mmshadows 1
 // waterfog 150
 // blurlms 2
+maptitle "Warground by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
