--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -69,6 +69,7 @@
 // mmshadows 1
 // waterfog 150
 // blurlms 0
+maptitle "The Seriously Big Valley by MitaMan"
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
