--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -73,6 +73,7 @@ numplayers 6
 // mmshadows 1
 // waterfog 150
 // blurlms 0
+maptitle "Rivals by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
 texture 1 "textures/waterfall.jpg"
