--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -3,6 +3,7 @@
 
 numplayers 18 // number of players in deathmatch
 numteamplayers 9 // number of players per team
+maptitle "Siege by Tony Cord"
 
 texture water "textures/water.jpg" 0 0 0 0.500000
 texture 1 "textures/waterfall.jpg"
