auto popup menu when in front of overseer console
Former-commit-id: 9c16bf85d7ad83cd307edaf684a0f6c67a2cb5ee

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -47,7 +47,7 @@
 // lightprecision 32
 // numplayers 6
 // adaptivesample 1
-maptitle [Overseer by Tony Cord]
+// maptitle [Overseer by Tony Cord]
 // waterfallcolour 0
 // floorz 0.867
 // shadowmapangle 0
@@ -72,15 +72,23 @@ maptitle [Overseer by Tony Cord]
 // waterfog 150
 // blurlms 0
 
-"on_start" = [ if (= (gamemode) 1) [ sleep $titlecard [ run_intro ] ] ]
-"run_intro" = [
-	intro_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
-	intro_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
-	intro_menu = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "showgui game") "or") $restorecolour)
-	echo (format "%1Welcome to %2, press [ %3 ] or walk up to a screen and press [ %4 ] to start." $yellow $intro_welcome $intro_menu $intro_action)
+"on_start" = [ if (= (gamemode) 1) [ sleep (* $titlecard 2) [ overseer_intro ] ] ]
+"overseer_intro" = [
+	overseer_welcome = (format "%1%2Blood Frontier%3" $savecolour $red $restorecolour)
+	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
+	overseer_menu = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "if (cleargui 1) [] [showgui main]") "or") $restorecolour)
+	echo (format "%1Welcome to %2, press [ %3 ] or walk up to a screen to start. Press [ %4 ] to pick up items." $yellow $overseer_welcome $overseer_menu $overseer_action)
 	sound (registersound "sfx/chat" 245 "air")
 ]
-"on_trigger_1" = [ showgui main ]
+"overseer_trigger_1" = 0
+"on_trigger_1" = [
+	if (= (gamemode) 1) [
+		if (|| (= $overseer_trigger_1 0) (>= (- (getmillis) $overseer_trigger_1) 3333)) [
+			if (= (guicount) 0) [ showgui main ]
+			overseer_trigger_1 = (getmillis)
+		]
+	]
+]
 
 texture water "textures/water.jpg" 0 0 0 1.000000
 texture 1 "textures/waterfall.jpg"
