added unique sample option to registersound/mapsound
Former-commit-id: df38a9c502a41d06a3cc844e347da57923f5e531

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -78,7 +78,7 @@
 	overseer_action = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "action") "or") $restorecolour)
 	overseer_menu = (format "%1%2%3%4" $savecolour $green (prettylist (searchbinds "if (cleargui 1) [] [showgui main]") "or") $restorecolour)
 	echo (format "%1Welcome to %2, press [ %3 ] or walk up to a screen to start. Press [ %4 ] to pick up items." $yellow $overseer_welcome $overseer_menu $overseer_action)
-	sound (registersound "sfx/chat" 245 "air")
+	sound (registersound "sfx/chat" 245 "air" -1 -1 1)
 ]
 "overseer_trigger_1" = 0
 "on_trigger_1" = [
