--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1002,6 +1002,16 @@ texture n "acord/rotten3n.jpg" 3 0 0 0.5
 texture s "acord/lowspec.jpg" 3 0 0 0.5
 texture z "acord/rotten3z.jpg" 3 0 0 0.5
 
+texture 0 "acord/sewer1.jpg" 0 0 0 0.25
+texture n "acord/sewer1n.jpg" 0 0 0 0.25
+texture s "acord/highspec.jpg" 0 0 0 0.25
+texture z "acord/sewer1z.jpg" 0 0 0 0.25
+
+texture 0 "acord/sewer1.jpg" 3 0 0 0.25
+texture n "acord/sewer1n.jpg" 3 0 0 0.25
+texture s "acord/highspec.jpg" 3 0 0 0.25
+texture z "acord/sewer1z.jpg" 3 0 0 0.25
+
 texture 0 "acord/tile2.jpg" 0 0 0 0.5
 texture n "acord/tile2n.jpg" 0 0 0 0.5
 texture s "acord/highspec.jpg" 0 0 0 0.5
