--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -105,6 +105,8 @@ bind TAB			[ showscores ]
 bind T				saycommand
 bind BACKQUOTE		"saycommand /"
 bind SLASH			"saycommand /"
+sayteamcommand = [inputcommand "" [sayteam $commandbuffer] "[team]"]
+bind Y "sayteamcommand"
 
 bind KP_MINUS		[ conskip 1 ]
 bind KP_PLUS		[ conskip -1000 ]
