--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -157,7 +157,7 @@ newgui game [
 		lastmuts = $mutsselected
 		showngamegui = 1
 	]
-	if (= (listlen $maplist) (+ $mapnum 1)) [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
+	if (strcmp (at $maplist $mapnum) "?") [ maptxt = $extramap ] [ maptxt = (at $maplist $mapnum) ]
 	guilist [
 		guilist [
 			guilist [
