added looplist and listfind commands
Former-commit-id: cffeab137193440b11376bbff9b5913d201e3597

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -129,30 +129,17 @@ newgui game [
 		ms = (* $modeselected 2)
 		if (& $mutsselected 0x0001) [ ms = (+ $ms 1) ]
 		do [maplist = $@(at $maplists $ms)]
-		n = (listlen $lobbymaps)
 		l = -1
-		loop i $n [
+		loop i (listlen $lobbymaps) [
 			ncurmap = (at $lobbymaps $i)
-			m = (listlen $maplist)
-			f = 0
-			loop j $m [
-				mcurmap = (at $maplist $j)
-				if (strcmp $ncurmap $mcurmap) [ f = 1 ]
-			]
-			if (= $f 0) [
+			if (< (listfind mcurmap $maplist [strcmp $mcurmap $ncurmap]) 0) [
 				if (< $l 0) [ maplist = (concat $maplist "?"); l = $i ]
 				maplist = (concat $maplist $ncurmap)
 			]
 		]
 		if (< $l 0) [ maplist = (concat $maplist "?"); l = $n ]
-		mapnum = 0
-		mapfnd = 0
-		n = (listlen $maplist)
-		loop i $n [ 
-			curmap = (at $maplist $i)
-			if (|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))) [ mapnum = $i; mapfnd = 1 ]
-		]
-		if (= $mapfnd 0) [ mapnum = $l; extramap = (mapname) ]
+		mapnum = (listfind curmap $maplist [|| (strcmp $curmap (mapname)) (strcmp (format "maps/%1" $curmap) (mapname))])
+		if (< $mapnum 0) [ mapnum = $l; extramap = (mapname) ]
 		lastmode = $modeselected
 		lastmuts = $mutsselected
 		showngamegui = 1
